# hermes-backend

./: .dockerignore  .env.example  .flake8  .gcloudignore  .gitignore  .pre-commit-config.yaml  DEPLOYMENT_SUCCESS_SUMMARY.md  Dockerfile  Dockerfile.dev  DudeWheresMyLambo.db  IMAGE_TAG_FIX.md  MCP_INTEGRATION_README.md  Makefile  PRE_COMMIT_SETUP.md  Pipfile  README.md  TTS_SERVICE_FIX_SUMMARY.md  authentication.py  debug_import.py  deploy.sh  docker-compose.dev.yml  docker-compose.yml  fix_async_tests.py  gunicorn.conf.py  pyproject.toml  pytest.ini  reproduce_auth.py  requirements.txt  run.py  start.sh  test_code_generation.py  test_dynamic_agent_core.py  test_dynamic_agent_e2e.py  test_dynamic_agents_basic.py  test_embeddings.py  test_legion_api.py  test_minimal_legion.py  test_planner.py  test_prism_session.py  test_prism_simple.py  (+2 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: push.yml  test.yml
app/: __init__.py  constants.py
app/config/: __init__.py  environment.py
app/core/: views.py
app/hermes/: __init__.py  constants.py  exceptions.py  models.py  routes.py  schemas.py  services.py  tasks.py  vector_sync_service.py
app/hermes/legion/: __init__.py  graph_service.py  models.py  orchestrator.py  persistence.py  resume_method.py  verify_legion.py
app/prism/: __init__.py  attendee_client.py  audio_processor.py  constants.py  exceptions.py  models.py  routes.py  schemas.py  services.py  session_store.py
app/services/: CloudStorageService.py  EmbeddingCacheService.py  GeminiService.py  IdentityService.py  TTSService.py  __init__.py
app/shared/: __init__.py
app/shared/config/: langfuse_config.py  posthog_config.py
app/shared/services/: AsyncLLMService.py  GeminiService.py  (+7 more)
app/utils/: service_loader.py  vector_store.py
benchmarks/: README.md  __init__.py  agent_benchmarks.py  bottleneck_analyzer.py  e2e_benchmarks.py  integration_benchmarks.py  performance_benchmarks.py  profiler.py  quality_evaluator.py  resilience_benchmarks.py  run_full_suite.py  scenarios.py
data/embeddings_cache/: embeddings.json  quality_report.json
docs/AgentPrompts/: HERMES.md  PRISM.md
docs/Personas/: ASSISTANT.md  HERMES.md  LEGION.md  PRISM.md
scripts/: audit_legion_modes.sh  generate_embeddings.py  legion_demo.py  test_decision_explanation.sh  test_multi_agent.sh  test_orchestration_rationale.sh
scripts/database/: clear_vectors.py  fix_match_documents.sql  generate_embeddings_supabase.py  run_sql_setup.py  setup_supabase_schema.py  supabase_schema.sql  test_langchain_integration.py  verify_schema.py
scripts/deployment/: ENV_SETUP.md  README.md  create-github-secret.sh  deploy-fixed.sh  deploy.sh  setup-secrets.sh  verify-build.sh
scripts/development/: dev_with_ngrok.sh  get_ngrok_url.py  prepare_env_for_docker.sh  set_ngrok_env.sh  start_ngrok.sh
scripts/mcp-server/: nginx.conf
tests/: README.md  conftest.py  test_frontend.py
tests/fixtures/: __init__.py  models.py
tests/integration/: __init__.py  test_gemini_tool_execution.py  test_legion_persona_system.py  test_persistence.py  test_prism_session_creation.py  test_supabase_database_integration.py  test_supabase_mock_integration.py  test_system_e2e.py  test_tts_integration.py  test_vector_db_integration.py
tests/performance/: test_vector_search_perf.py
tests/unit/: __init__.py  test_prism_signal_handling.py  test_signal_fix_verification.py  test_signal_handling_simple.py  test_supabase_database_service.py
tests/utils/: assertions.py
(+158 files in other folders)
