[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "amqp>=5.3.1",
    "apispec>=6.8.4",
    "async-timeout>=5.0.1",
    "beautifulsoup4>=4.14.2",
    "billiard>=4.2.2",
    "black>=25.9.0",
    "celery>=5.5.3",
    "certifi>=2025.10.5",
    "charset-normalizer>=3.4.4",
    "click>=8.3.0",
    "click-didyoumean>=0.3.1",
    "click-plugins>=1.1.1.2",
    "click-repl>=0.3.0",
    "colorama>=0.4.6",
    "deprecated>=1.2.18",
    "dnspython>=2.8.0",
    "elevenlabs>=2.20.1",
    "fastapi>=0.120.0",
    "ffmpeg-python>=0.2.0",
    "flake8>=7.3.0",
    "flasgger>=0.9.7.1",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "flask-talisman>=1.1.0",
    "flask-testing>=0.8.1",
    "gevent>=25.9.1",
    "google-cloud-aiplatform>=1.122.0",
    "google-cloud-storage>=2.19.0",
    "google-cloud-texttospeech>=2.33.0",
    "google-generativeai>=0.8.5",
    "greenlet>=3.2.4",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "idna>=3.11",
    "ipdb>=0.13.13",
    "ipython>=9.6.0",
    "itsdangerous>=2.2.0",
    "kombu>=5.5.4",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-core>=0.3.79",
    "langchain-google-genai>=2.0.10",
    "langchain-google-vertexai>=2.1.2",
    "langgraph>=1.0.1",
    "langsmith>=0.4.38",
    "lxml>=5.3.0",
    "markdown-it-py>=3.0.0",
    "markupsafe>=2.1.5",
    "marshmallow>=3.22.0",
    "marshmallow-enum>=1.5.1",
    "marshmallow-sqlalchemy>=1.3.1",
    "mistune>=3.1.0",
    "more-itertools>=10.2.0",
    "mypy-extensions>=1.0.0",
    "nltk>=3.9.0",
    "numpy>=2.0.0",
    "openai>=1.63.0",
    "packaging>=24.2",
    "pandas>=2.2.2",
    "pathspec>=0.12.1",
    "pika>=1.3.2",
    "prompt-toolkit>=3.0.50",
    "protobuf>=5.29.0",
    "psycopg2-binary>=2.9.9",
    "pydub>=0.25.1",
    "pyasn1>=0.6.0",
    "pycodestyle>=2.12.0",
    "pydantic>=2.7.2",
    "pydantic-core>=2.18.4",
    "pydantic-settings>=2.7.1",
    "pyflakes>=3.3.0",
    "pymupdf>=1.24.5",
    "pymupdfb>=1.0.0",
    "pyparsing>=3.2.1",
    "python-dateutil>=2.9.0",
    "python-dotenv>=1.0.1",
    "python-editor>=1.0.4",
    "python-jose>=3.3.0",
    "pytz>=2024.2",
    "pyyaml>=6.0.1",
    "redis>=5.0.1",
    "requests>=2.32.3",
    "rsa>=4.9",
    "six>=1.16.0",
    "soupsieve>=2.6.1",
    "sqlalchemy>=2.0.30",
    "sqlalchemy-utils>=0.41.1",
    "starlette>=0.37.2",
    "supabase>=2.13.0",
    "tenacity>=8.3.0",
    "tqdm>=4.67.0",
    "traitlets>=5.14.3",
    "typing-extensions>=4.12.2",
    "tzdata>=2024.1",
    "urllib3>=2.2.1",
    "uvicorn>=0.30.1",
    "uvloop>=0.19.0",
    "vine>=5.1.0",
    "watchfiles>=0.22.0",
    "wcwidth>=0.2.13",
    "websockets>=11.0.3",
    "werkzeug>=3.0.3",
    "simple-websocket>=1.0.0",
    "wrapt>=1.16.0",
    "yarl>=1.9.4",
    "zstandard>=0.23.0"
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-xdist>=3.3.0",
    "pytest-timeout>=2.1.0",
    "pytest-flask>=1.2.0",
    "factory-boy>=3.3.0",
    "freezegun>=1.2.0",
    "responses>=0.23.0",
    "faker>=19.0.0",
    "websocket-client>=1.6.0",
]

[tool.setuptools]
packages = ["app", "data"]
zip-safe = false
